--- a/Pages/Index.html
+++ b/Pages/Index.html
@@ -25,12 +25,14 @@
       style="position: absolute;width: 100%; height:115vh; width:204vh; margin:auto; transform: translate(-50%,-120px);"
       title="Rangeview Intermediate Website">
     </iframe>
-    <div class="parallaxInner">
+    <div class="parallaxInner" style="padding: 0px;">
+      <h1 class="bg-dark" style="height:100%;width:auto; margin-top: 0px; margin-right: auto; margin-left: auto; margin-bottom: 0px;">
       <b>
         <i>
           Wisdom with truth - Whakaaronui me ta pono
         </i>
       </b>
+    </h1>
     </div>
   </div>
   <div class="d-block d-sm-none">
